--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,17 @@ body {
   letter-spacing: -0.05rem;
 }
 
+.total-wrap {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 1) 10%, rgba(250, 250, 250, 1) 70%);
+}
+
 .wrap {
+  margin: 0 auto;
   display: flex;
   position: relative;
+  max-width: 192rem;
+  overflow: hidden;
 }
 
 /* header */
@@ -83,15 +91,19 @@ body {
   width: 20%;
   background: var(--white);
   /* border: 1px solid #000; */
+  /* 모든 화면에서 헤더 20%로 고정되는 현상 막기 */
+  max-width: 38.4rem;
 
   height: 100vh;
 
   position: fixed;
   z-index: 10;
+  /* border: 1px solid #000; */
 }
 
 #header .inner {
-  width: 30rem;
+  /* width: 30rem; */
+  width: 78.125%;
   padding: 6rem 0;
   margin: 0 auto;
   /* background: rgba(255, 255, 0, 0.2); */
@@ -119,7 +131,7 @@ body {
 .gnb li a {
   display: flex;
   width: 100%;
-  height: 5rem;
+  height: 6rem;
   border-radius: 1rem;
 
   align-items: center;
@@ -160,10 +172,13 @@ body {
   width: 80%;
   background: var(--white1);
   padding: 0 0 0 20%;
+
+  margin: 0 auto;
 }
 
 section > .inner {
   width: 141.6rem;
+  width: 92.1875%;
   margin: 0 auto;
   /* background: rgba(255, 255, 0, 0.2); */
 }
@@ -179,6 +194,8 @@ section > .inner {
 .visual-video {
   width: 100%;
   height: 74.2rem;
+  height: 84rem;
+  height: 80vh;
   background: var(--dark-green);
   border-radius: 2rem;
 
@@ -190,17 +207,22 @@ section > .inner {
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--cream);
-  width: 100%;
-  width: 121.6rem;
+  /* width: 100%; */
+  /* width: 121.6rem; */
+
+  width: 80%;
   width: 85.8757%;
-  height: 100%;
+  /* height: 100%; */
   height: 60.2rem;
+  height: 65vh;
 
   /* background: rgba(255, 255, 255, 0.2); */
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  background: rgba(red, green, blue, alpha);
 }
 .visual-con span {
   font-size: 1.4rem;
@@ -208,6 +230,7 @@ section > .inner {
 }
 .visual-con h2 {
   font-size: 8.4rem;
+
   font-weight: 600;
   letter-spacing: -0.2rem;
   line-height: 0.95;
@@ -238,6 +261,97 @@ section > .inner {
   width: 5.7rem;
   height: 4.8rem;
   margin-bottom: 1rem;
+}
+.ani-wrap {
+  position: absolute;
+  top: 10%;
+  left: 0;
+  transform: scale(1.1);
+  display: flex;
+  width: 39rem;
+
+  gap: 4rem;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.icon-ani1,
+.icon-ani4,
+.icon-ani5 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 10rem;
+  height: 10rem;
+  background: rgba(255, 255, 255, 0.2);
+}
+.icon-ani1 span {
+  display: block;
+  width: 50%;
+  height: 100%;
+  /* border: 1px solid #000; */
+}
+
+.icon-ani1 .icon-ani1-sec1 {
+  background: url(../img/visual-con-sec1-1.svg) no-repeat 50%;
+}
+
+.icon-ani1 .icon-ani1-sec2 {
+  background: url(../img/visual-con-sec1-2.svg) no-repeat 50%;
+}
+
+.icon-ani2,
+.icon-ani3 {
+  width: 10rem;
+  height: 10rem;
+  background: rgba(255, 255, 255, 0.2);
+}
+.icon-ani2 span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url(../img/visual-con-sec2.svg) no-repeat 50%;
+}
+
+.icon-ani3 span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url(../img/visual-con-sec3.svg) no-repeat 50%;
+  /* border: 1px solid #000; */
+}
+.icon-ani4 span {
+  display: block;
+  width: 50%;
+  height: 50%;
+  border-radius: 50%;
+}
+.icon-ani4 span:nth-of-type(1),
+.icon-ani4 span:nth-of-type(4) {
+  background: var(--red);
+}
+.icon-ani4 span:nth-of-type(2),
+.icon-ani4 span:nth-of-type(3) {
+  background: var(--yellow);
+}
+.icon-ani5 > .ani5-clip {
+  display: block;
+  width: 50%;
+  height: 50%;
+  /* border: 1px solid #000; */
+}
+.ani5-clip {
+  border: 1px solid #000;
+  /* overflow: hidden; */
+}
+.icon-ani5 .ani5-clip > span {
+  display: block;
+  width: 5rem;
+  height: 10rem;
+}
+.icon-ani5 .ani5-clip .icon-ani5-sec1 {
+  background: url(../img/visual-con-sec1-1.svg) no-repeat 0 0;
+}
+.icon-ani5 .ani5-clip .icon-ani5-sec2 {
+  background: url(../img/visual-con-sec1-2.svg) no-repeat 0 0%;
 }
 
 /* Section 01 : about */
@@ -377,7 +491,11 @@ section > .inner {
   display: flex;
   justify-content: space-between;
 }
-
+.name-wrap {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
 .name {
   /* border: 1px solid #000; */
 }
@@ -400,6 +518,33 @@ section > .inner {
   font-size: 1.8rem;
 
   margin-top: 1.6rem;
+}
+
+.name-deco {
+  position: relative;
+  border: 1px solid #000;
+}
+.name-deco span {
+  display: block;
+  width: 6rem;
+  height: 6rem;
+  background: url(../img/arrow-green-thick.svg) no-repeat 50%;
+}
+.name-deco span:not(:first-of-type) {
+  position: absolute;
+}
+
+.name-deco span:nth-of-type(2) {
+  transform: translate(200%, -100%);
+  border: 1px solid red;
+}
+.name-deco span:nth-of-type(3) {
+  transform: translate(100%, -200%);
+  border: 1px solid yellow;
+}
+.name-deco span:nth-of-type(4) {
+  transform: translate(0, -300%);
+  border: 1px solid blue;
 }
 .info-detail {
   width: 88.6rem;
@@ -835,7 +980,7 @@ section > .inner {
 }
 
 .contact-text {
-  /* border: 1px solid #000; */
+  border: 1px solid #000;
   padding: 0 5rem;
   width: 45%;
   height: 100%;
