--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ section > .inner {
   flex-wrap: wrap;
   width: 10rem;
   height: 10rem;
-  background: rgba(255, 255, 255, 0.2);
+  /* background: rgba(255, 255, 255, 0.2); */
 }
 .icon-ani1 span {
   display: block;
@@ -305,7 +305,7 @@ section > .inner {
 .icon-ani3 {
   width: 10rem;
   height: 10rem;
-  background: rgba(255, 255, 255, 0.2);
+  /* background: rgba(255, 255, 255, 0.2); */
 }
 .icon-ani2 span {
   display: block;
@@ -336,9 +336,21 @@ section > .inner {
   background: var(--yellow);
 }
 .icon-ani5 {
-  /* overflow: hidden;
-  border-radius: 50%; */
+  overflow: hidden;
+  /* border-radius: 50%; */
 }
+.icon-ani5 span {
+  display: block;
+  width: 100%;
+  height: 50%;
+}
+.icon-ani5 .icon-ani5-sec1 {
+  background: url(../img/visual-con-sec5-5.svg) no-repeat 0 0;
+}
+.icon-ani5 .icon-ani5-sec2 {
+  background: url(../img/visual-con-sec5-6.svg) no-repeat 0 0;
+}
+
 .icon-ani5 > .ani5-clip {
   display: block;
   width: 50%;
