--- a/css/common.css
+++ b/css/common.css
@@ -86,6 +86,7 @@ body {
   background: #fff;
   z-index: 100;
 }
+
 .logo-ani {
   display: flex;
   align-items: center;
@@ -93,6 +94,7 @@ body {
   width: 100%;
   height: 100%;
 }
+
 .logo-ani-wrap .btn-skip {
   position: absolute;
   bottom: 10%;
@@ -177,6 +179,8 @@ body {
   counter-increment: index-count;
   transition: 0.5s;
   border: 2px solid var(--gray);
+
+  cursor: pointer;
 }
 
 .gnb li a b {
@@ -247,4 +251,73 @@ section > .inner {
   width: 92.1875%;
   margin: 0 auto;
   /* background: rgba(255, 255, 0, 0.2); */
+}
+
+/* 일반 커서 */
+.cursor {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 2rem;
+  height: 2rem;
+  border-radius: 2rem;
+
+  transform: translate(-50%, 100%);
+  /* background: var(--dark-green); */
+  z-index: 100;
+  transition: 0.3s;
+}
+
+.visual-cursor {
+  position: absolute;
+
+  background: var(--red);
+  height: 5rem;
+  width: 18rem;
+  padding: 0.8rem 2rem;
+  /* height: 3rem; */
+  border-radius: 5rem;
+  transition: 0.1s;
+
+  color: var(--cream);
+  font-size: 18px;
+  font-weight: 600;
+
+  user-select: none;
+  pointer-events: none;
+}
+
+.visual-cursor::after {
+  content: '';
+  display: block;
+  width: 2rem;
+  height: 2rem;
+  margin-left: 0.8rem;
+  background: url(../img/ico-arrow-white-small.svg) no-repeat 50%;
+  transform: rotate(180deg);
+}
+
+.portfolio-cursor {
+  position: absolute;
+
+  background: var(--green);
+  height: 15rem;
+  width: 15rem;
+  padding: 0.8rem 2rem;
+  /* height: 3rem; */
+  border-radius: 50%;
+  transition: 0.1s;
+
+  color: var(--cream);
+  font-size: 20px;
+  font-weight: 600;
+
+  transform: translate(-50%, -50%);
+
+  user-select: none;
+  pointer-events: none;
+  cursor: none;
+  /* mix-blend-mode: difference; */
 }
