--- a/css/sub.css
+++ b/css/sub.css
@@ -21,7 +21,8 @@
 nav {
   display: flex;
   flex-direction: column;
-  gap: 10rem;
+  gap: 15rem;
+  position: relative;
 }
 .project-gnb {
   display: flex;
@@ -100,6 +101,105 @@ nav {
 .project-gnb li:hover a b::after {
   opacity: 1;
   background: var(--green);
+}
+
+.project-intro {
+  background: #f5f5f5 no-repeat 0 0 / cover;
+  height: 100vh;
+  width: 100%;
+  color: var(--white);
+  /* padding: 16rem 0; */
+  position: relative;
+}
+.project-intro .inner {
+  width: 88%;
+}
+.info {
+  /* background: rgba(255, 255, 0, 0.2); */
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  height: 70vh;
+  width: 85%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.title-wrap {
+  /* display: flex; */
+  /* flex-direction: column; */
+
+  /* background: red; */
+}
+.title-wrap .title {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  /* border: 1px solid #000; */
+}
+.title-wrap .title h2 {
+  display: block;
+  width: 100%;
+  height: 6rem;
+  background: transparent no-repeat 0 50%;
+}
+.title-wrap .title p:first-of-type {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 2.8rem;
+  gap: 0.8rem;
+}
+.title-wrap .title p span {
+  font-weight: 400;
+  font-size: 2.4rem;
+}
+
+.title-wrap .title p:last-of-type {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.title-wrap a {
+  display: inline-block;
+  padding: 1.4rem 4rem;
+  border-radius: 5rem;
+  /* border: 1px solid #000; */
+  background: var(--white);
+  margin-top: 5rem;
+  font-size: 1.8rem;
+  font-weight: 600;
+  transition: 0.4s;
+}
+.detail {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.detail > div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+}
+
+.detail strong {
+  font-weight: 600;
+  font-size: 2rem;
+}
+.detail p {
+  font-weight: 300;
+  font-size: 1.6rem;
+}
+.detail .detail-tool ul {
+  display: flex;
+  gap: 1rem;
+}
+.detail .detail-tool ul li {
+  width: 4.4rem;
+  height: 4.4rem;
+  background: #111;
+  border-radius: 0.8rem;
 }
 
 section {
