--- a/css/sub.css
+++ b/css/sub.css
@@ -1,3 +1,6 @@
+html {
+  overflow-y: auto;
+}
 .total-wrap {
   max-width: 192rem;
   margin: 0 auto;
@@ -144,12 +147,22 @@ nav {
   height: 6rem;
   background: transparent no-repeat 0 50%;
 }
+.title-wrap .title .project01-logo {
+  background-image: url(../project-img/01-logo.svg);
+}
+.title-wrap .title .project02-logo {
+  width: 28rem;
+  height: 18rem;
+  background: no-repeat 0 50% / cover;
+  background-image: url(../project-img/02-logo.svg);
+}
 .title-wrap .title p:first-of-type {
   display: flex;
   align-items: center;
   font-weight: 600;
   font-size: 2.8rem;
   gap: 0.8rem;
+  color: #ccc;
 }
 .title-wrap .title p span {
   font-weight: 400;
@@ -159,6 +172,7 @@ nav {
 .title-wrap .title p:last-of-type {
   font-size: 1.8rem;
   font-weight: 500;
+  color: #ccc;
 }
 
 .title-wrap a {
@@ -172,6 +186,26 @@ nav {
   font-weight: 600;
   transition: 0.4s;
 }
+.title-wrap .project01-color {
+  background: #10255a;
+  color: #fff;
+}
+.title-wrap .project01-color:hover {
+  background: #fff;
+  color: #10255a;
+}
+.title-wrap .project02-color {
+  background: #1d1e22;
+  border: 1px solid #454950;
+  color: #f5f5f5;
+}
+
+.title-wrap .project02-color:hover {
+  background: #1d1e22;
+  border: 1px solid #fdc731;
+  color: #f5f5f5;
+}
+
 .detail {
   display: flex;
   flex-direction: column;
@@ -190,6 +224,7 @@ nav {
 .detail p {
   font-weight: 300;
   font-size: 1.6rem;
+  color: #ccc;
 }
 .detail .detail-tool ul {
   display: flex;
@@ -199,7 +234,28 @@ nav {
   width: 4.4rem;
   height: 4.4rem;
   background: #111;
-  border-radius: 0.8rem;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.detail .detail-tool ul li span {
+  width: 2.4rem;
+  height: 2.4rem;
+  display: block;
+  background: red;
+}
+.detail .detail-tool ul li span.ico-figma {
+  background: transparent url(../img/ico-skill-figma.svg) no-repeat 50% / contain;
+}
+.detail .detail-tool ul li span.ico-illustrator {
+  background: transparent url(../img/ico-skill-illustrator.svg) no-repeat 50% / 90% auto;
+}
+.detail .detail-tool ul li span.ico-photoshop {
+  background: transparent url(../img/ico-skill-photoshop.svg) no-repeat 50% / 90% auto;
+}
+.detail .detail-tool ul li span.ico-vscode {
+  background: transparent url(../img/ico-skill-vscode.svg) no-repeat 50% / 110% auto;
 }
 
 section {
