--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,16 @@
 
   position: relative;
   transform-origin: 100% 0;
+
+  overflow: hidden;
+}
+.visual-video video {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: -1;
+  transform-origin: 100% 100%;
+  transform: translateX(5%) scale(0.99);
 }
 .visual-con {
   position: absolute;
@@ -526,7 +536,7 @@
   justify-content: space-between;
   /* border: 1px solid #000; */
 
-  width: 43rem;
+  width: 44rem;
 }
 .education,
 .experience,
@@ -534,7 +544,7 @@
 .info2 {
   display: flex;
   flex-direction: column;
-  gap: 1.6rem;
+  gap: 1rem;
 }
 .education dl,
 .experience dl,
@@ -542,10 +552,12 @@
   display: flex;
   gap: 2rem;
 
+  word-break: keep-all;
   /* border: 1px solid #000; */
 }
+
 .info1-right {
-  width: 40rem;
+  width: 43rem;
 }
 .info2 ul {
   display: flex;
@@ -638,7 +650,7 @@
   height: 30rem;
   background: var(--gray);
 
-  padding: 3rem 0;
+  padding: 3.6rem 0;
   border-radius: 1.2rem;
 
   position: absolute;
@@ -648,32 +660,32 @@
   transition: 0.4s;
 }
 .card-detail > .inner {
-  width: 32.5rem;
+  width: 30.5rem;
   margin: 0 auto;
   /* background: rgba(255, 255, 0, 0.2); */
   height: 100%;
 
   position: relative;
 }
-.card-detail > .inner::after {
+/* .card-detail > .inner::after {
   content: '';
 
   display: block;
   background: url(../img/ico-pine-2-3.svg) no-repeat 50%;
   width: 4.8rem;
   height: 5rem;
-  /* border: 1px solid #000; */
 
   position: absolute;
   bottom: 0;
   right: 0;
-}
+} */
 
 .card-detail strong {
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 2.4rem;
+  font-weight: 800;
   color: var(--green);
 
+  line-height: 1.2;
   display: flex;
   justify-content: space-between;
 }
@@ -681,10 +693,10 @@
 .card-detail strong::after {
   content: '';
   display: block;
-  width: 3rem;
-  height: 3rem;
+  width: 4rem;
+  height: 4rem;
   border-radius: 50%;
-  background: var(--red) url(../img/ico-arrow-white-small.svg) no-repeat 50%;
+  background: var(--red) url(../img/ico-arrow-white-small.svg) no-repeat 50% /40% auto;
   transform: rotate(180deg);
 }
 .card-detail p {
