--- a/css/style.css
+++ b/css/style.css
@@ -1051,6 +1051,7 @@
 }
 .contact-pic {
   width: 45%;
+  min-width: 60rem;
   height: 100%;
   background: var(--cream);
   border-radius: 2rem;
@@ -1059,8 +1060,8 @@
 }
 
 #lottie-tree {
-  height: 120%;
-  width: 120%;
+  height: 110%;
+  width: 110%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1070,8 +1071,8 @@
 
 .contact-pic span {
   display: block;
-  width: 4rem;
-  height: 4rem;
+  width: 3.2rem;
+  height: 3.2rem;
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
@@ -1085,18 +1086,38 @@
 }
 .contact-pic span:nth-of-type(1) {
   left: 50%;
-  top: 3rem;
+  top: 5rem;
+}
+.contact-pic span:nth-of-type(2) {
+  left: 40%;
+  top: 12rem;
+}
+.contact-pic span:nth-of-type(3) {
+  right: 35%;
+  top: 15rem;
+}
+.contact-pic span:nth-of-type(4) {
+  right: 45%;
+  top: 20rem;
+}
+.contact-pic span:nth-of-type(5) {
+  left: 42%;
+  top: 28rem;
+}
+.contact-pic span:nth-of-type(6) {
+  right: 38%;
+  top: 30rem;
 }
 
 .contact-text {
   /* border: 1px solid #000; */
-  padding: 0 5rem;
+  padding: 0 10rem;
   width: 45%;
   height: 100%;
   display: flex;
 
   align-items: center;
-  justify-content: center;
+  justify-content: start;
 }
 
 .contact-text-wrap {
